fix: body height when menu is open on mobile

--- a/src/app/components/header/burger-menu/burger-menu.module.scss
+++ b/src/app/components/header/burger-menu/burger-menu.module.scss
@@ -1,3 +1,7 @@
+.noScroll {
+  height: calc(100vh + 64px);
+}
+
 .burgerMenu {
   .burgerButton {
     background: none;
@@ -22,7 +26,7 @@
 
   .menu {
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh + 64px);
     position: absolute;
     left: 0;
     background-color: var(--light-gray-bg);
