--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.noSroll {
+  overflow: hidden;
+  border: 1px solid red;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
